--- a/public/views/available-tickets.hbs
+++ b/public/views/available-tickets.hbs
@@ -7,8 +7,7 @@
         <div class="row mb-1 flex-wrap">
             <button class="col-auto btn btn-outline-light px-3 py-0 ms-3 mw-80">Details</button>
             <h3 class="col-auto mb-0 flex-grow-1 fw-300">Block {{this.block}} Section {{this.section}} Row {{this.row}}</h3>
-            <p class="col-auto text-end mb-0 mt-1 fs-1 fst-italic fw-300" style="line-height:
-            80%">{{this.price.formatted.totalWithFees}}</p>
+            <p class="col-auto text-end mb-0 mt-1 fs-1 fst-italic fw-300 line-height-1em">{{this.price.formatted.totalWithFees}}</p>
         </div>
         <div class="row mt-1 fs-5">
             <p class="col-auto mb-0">
