--- a/views/layouts/main-logged-in.hbs
+++ b/views/layouts/main-logged-in.hbs
@@ -1,7 +1,7 @@
 <!DOCtyPE html>
 <html lang="en">
 <head>
-    <title>Tickety Boo</title>
+    <title>Tick Fix</title>
 
     {{{_sections.head}}}
 
