--- a/views/partials/nav.hbs
+++ b/views/partials/nav.hbs
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-dark bg-dark position-relative" style="z-index: 2000">
     <div class="container-fluid">
-        <a href="/" class="navbar-header navbar-brand pt-0">Tickety Boo</a>
+        <a href="/" class="navbar-header navbar-brand pt-0">TixFix</a>
         <ul class="navbar-nav">
             <li class="nav-item"><a href="/events" class="nav-link">Events</a></li>
             <li class="nav-item dropdown btn-group">
