bout to present

--- a/public/styles.css
+++ b/public/styles.css
@@ -107,6 +107,10 @@ main {
     /* filter: drop-shadow(0 0 3px white); */
 }
 
+#wl-main, #wl-form {
+    background-color: var(--black-0-5);
+}
+
 .event-card {
     background-color: rgba(0, 0, 0, 0.3) !important;
 }
@@ -317,8 +321,8 @@ div:hover > #increase-tickets:disabled + p {
     cursor: pointer;
 }
 
-#purchase-main > div:first-of-type {
-    background-color: var(--black-0-5);
+#purchase-main {
+    background-color: var(--black-0-3);
 }
 
 #change-city-btn {
