--- a/public/views/select-seats.hbs
+++ b/public/views/select-seats.hbs
@@ -9,7 +9,8 @@
     <div class="container row m-auto p-0">
         
         <div class="col-6">
-            <p class="comment">seat map/view goes here</p>
+            <img src="/images/venues/views/{{section}}-{{block}}-{{row}}.jpg" class="col-12 mx-auto" alt="">
+            <p class="text-uppercase text-center fst-italic mb-0">View from block {{block}}</p>
         </div>
 
         <form id="select-seats-form" action="/pay/create-checkout-session" method="POST" class="col-6 p-0">
