--- a/views/partials/nav.hbs
+++ b/views/partials/nav.hbs
@@ -36,7 +36,7 @@
                     {{/if}}
                 </ul>
             </li>
-            <li class="nav-item"><a class="nav-link" href="/about">About</a></li>
+            {{!-- <li class="nav-item"><a class="nav-link" href="/about">About</a></li> --}}
         </ul>
 
         <form action="/search" method="get" class="d-flex col-5">
