--- a/public/views/no-tickets.hbs
+++ b/public/views/no-tickets.hbs
@@ -1,5 +1,5 @@
-<h3>No tickets available</h3>
-<p>To be notified when more tickets are available, sign up to the waiting list</p>
+<h3 class="text-center text-white">No tickets available</h3>
+<p class="text-center text-white">To be notified when more tickets are available, sign up to the waiting list</p>
 <form action="/events/tour/{{tour_id}}/waiting-list" method="get" class="d-block text-center">
     <input name="venue" value="{{venue_id}}" hidden>
     <input name="dates" type="text" id="waiting-list-dates" value="{{date_value}}" hidden>
