--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -5,7 +5,7 @@
 
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>Tick Fix</title>
+    <title>Tix Fix</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
     <link rel="stylesheet" type="text/css" href="/styles.css" />
 
