--- a/views/partials/nav-logged-in.hbs
+++ b/views/partials/nav-logged-in.hbs
@@ -30,7 +30,7 @@
                     </li>
                 </ul>
             </li>
-            <li class="nav-item"><a class="nav-link" href="/about">About</a></li>
+            {{!-- <li class="nav-item"><a class="nav-link" href="/about">About</a></li> --}}
         </ul>
 
         <form action="/search" method="get" class="d-flex col-5">
