--- a/public/views/select-seats.hbs
+++ b/public/views/select-seats.hbs
@@ -1,4 +1,4 @@
-<div class="bg-white p-3 rounded col-10">
+<div class="bg-white p-3 rounded col-10 col-md-8" style="max-height: 80vh">
     <div class="d-flex justify-content-between" >
         <h1 class="">Block {{block}} Section {{section}} Row {{row}}</h1>
         <button id="close-select-seats" class="btn-close"></button>
@@ -8,12 +8,12 @@
 
     <div class="container row m-auto p-0">
         
-        <div class="col-6">
+        <div class="col-6 d-flex flex-column align-content-center justify-content-center">
             <img src="/images/venues/views/{{section}}-{{block}}-{{row}}.jpg" class="col-12 mx-auto" alt="">
             <p class="text-uppercase text-center fst-italic mb-0">View from block {{block}}</p>
         </div>
 
-        <form id="select-seats-form" action="/pay/create-checkout-session" method="POST" class="col-6 p-0">
+        <form id="select-seats-form" action="/pay/create-checkout-session" method="POST" class="col-6 p-0 d-flex flex-column align-content-center justify-content-center">
 
             <label for="date" class="h4 text-center d-block">Date</label>
             <select class="form-select" name="date" required>
@@ -37,16 +37,16 @@
         <input name="venueID" value={{venueID}} hidden>
         <input name="currentUrl" value={{currentURL}} hidden>
 
-        <div class="d-flex mt-3 align-items-center" style="gap: 8px">
-            <p class="my-0">
+        {{!-- <div class="d-flex mt-3 align-items-center" style="gap: 8px"> --}}
+             <p class="my-0 fs-5 text-center my-2">
                 <span class="text-uppercase fw-bold fst-italic small">Total</span> 
-                {{log this}}
-                {{price.formatted.total}} 
-                <span class="text-muted small">+ £3.99 fees</span></p>
-            <button id="purchase" class="btn btn-primary flex-grow-1">
+                {{price.formatted.totalWithFees}}
+                <span class="text-muted small">+ £3.99 fees</span>
+            </p>
+            <button id="purchase" class="btn btn-primary col-12">
                 Purchase
             </button>
-        </div>
+        {{!-- </div> --}}
         
 
         
