--- a/views/account/account.hbs
+++ b/views/account/account.hbs
@@ -31,7 +31,7 @@
 
         {{#each orders}}
             <hr class="col-md-10 mx-auto">
-            <section class="mx-auto my-3 px-3 d-flex flex-row-reverse flex-wrap justify-content-between {{#if this.refunded}}text-muted{{/if}} col-md-9">
+            <section class="mx-auto my-3 px-3 d-flex flex-column flex-md-row-reverse flex-wrap flex-md-nowrap justify-content-center justify-content-md-between {{#if this.refunded}}text-muted{{/if}} col-md-9 col-12">
                 {{#if this.refunded}}
                     <p class="fs-6 fw-300 text-uppercase fst-italic mb-1">already refunded</p>
                 {{else}}
@@ -47,7 +47,7 @@
                                 </button>
                                 <br>
                             {{else}}
-                                <p class="small text-muted fst-italic mb-1 fw-300">Not eligible for refund: 
+                                <p class="small text-muted fst-italic mb-1 fw-300 text-center text-md-end">Not eligible for refund: 
                                     {{#if (compareValues this.refundReason "==" "event date")}}
                                         Event in less than 7 days
                                     {{else}}
@@ -56,12 +56,12 @@
                                 </p>
                             {{/if}}
                         {{/if}}
-                        <p class="mt-0 mb-1 text-end fw-400 fst-italic" style="clear: both">
+                        <p class="mt-0 mb-1 text-center text-md-end fw-400 fst-italic" style="clear: both">
                             Purchased {{formatDistance this.purchased_at}} ago
                         </p>
                     </div>
                 {{/if}}
-                <div>
+                <div class="text-center text-md-start">
                     <p class="fs-4 mb-1">{{this.artist_name}} {{this.tour_name}}</p>
                     <p class="mb-1">
                         {{this.venue_name}}, {{this.city}}
@@ -92,10 +92,6 @@
         {{#each waitingLists}} 
             <hr class="col-md-10 mx-auto">
             <section class="mx-auto my-3 px-3 d-flex flex-column flex-wrap justify-content-center text-center col-md-9">
-                {{!-- { "wl_id": 1, "date": "2023-05-29", "qty": 1, "venue_name": "Tottenham Hotspur Stadium", "artist_name": "Beyonce", "tour_name": "Renaissance World Tour", "city": "London" } --}}
-                {{!-- <p class="fw-400 mb-1">{{this.artist_name}} {{this.tour_name}}</p>
-                <p class="fw-400 mb-1">{{formatDate this.date "EEEE do LLLL yyyy"}}</p>
-                <p class="fw-400 mb-1">{{this.venue_name}}, {{this.city}}</p> --}}
                 <p class="fw-400 mb-0 fst-italic small">
                     You're looking for:
                 </p>
@@ -135,19 +131,6 @@
                     </p>
                     <p class="my-1 me-2 fw-300">Seat{{addPluralS this.seats.length}} {{groupSeats this.seats "range"}}</p>
                     <p class="my-1 me-2 fw-300">£00.00</p>
-                    {{!-- <p id="order-details-event" class="my-1 me-2">
-                        <span class="fw-500 text-uppercase small fst-italic">Event</span>
-                        <span>xyz</span>
-                    </p>
-                    <p id="order-details-date" class="my-1">
-                        <span class="fw-bold">Date</span> <span></span>
-                    </p>
-                    <p id="order-details-seats" class="my-1">
-                        <span class="fw-bold">Seats</span> <span></span>
-                    </p>
-                    <p id="order-details-price-paid" class="my-1">
-                        <span class="fw-bold">Price paid</span> <span></span>
-                    </p> --}}
                 </section>
                 <form action="account/request-refund" method="POST">
                     <input name="order-id" value="{{this.order_id}}" hidden>
