--- a/public/views/select-seats.hbs
+++ b/public/views/select-seats.hbs
@@ -41,7 +41,7 @@
              <p class="my-0 fs-5 text-center my-2">
                 <span class="text-uppercase fw-bold fst-italic small">Total</span> 
                 {{price.formatted.totalWithFees}}
-                <span class="text-muted small">+ £3.99 fees</span>
+                <span class="text-muted small">inc £3.99 fees</span>
             </p>
             <button id="purchase" class="btn btn-primary col-12">
                 Purchase
