--- a/public/views/select-seats.hbs
+++ b/public/views/select-seats.hbs
@@ -9,8 +9,8 @@
     <div class="container row m-auto p-0">
         
         <div class="col-6 d-flex flex-column align-content-center justify-content-center">
-            <img src="/images/venues/views/{{section}}-{{block}}-{{row}}.jpg" class="col-12 mx-auto" alt="">
-            <p class="text-uppercase text-center fst-italic mb-0">View from block {{block}}</p>
+            <img src="/images/venues/views/{{section}}-{{block}}-{{row}}.jpg" class="col-12 mx-auto" alt="Computer generated image of the view from block {{block}} section {{section}}">
+            <p class="text-uppercase text-center fst-italic mb-0">View from block {{block}} section {{section}}</p> 
         </div>
 
         <form id="select-seats-form" action="/pay/create-checkout-session" method="POST" class="col-6 p-0 d-flex flex-column align-content-center justify-content-center">
