--- a/views/account/account.hbs
+++ b/views/account/account.hbs
@@ -39,7 +39,7 @@
                         {{#if (isFuture this.event_date)}}
                             {{#if this.eligibleForRefund}}
                                 <button 
-                                    class="refund-btn btn btn-secondary float-end mb-2 text-uppercase fw-300" 
+                                    class="refund-btn btn btn-secondary float-md-end mb-2 text-uppercase fw-300" 
                                     data-order="{{stringify this}}"
                                     data-order-id="{{this.order_id}}"
                                 >
