--- a/views/partials/nav.hbs
+++ b/views/partials/nav.hbs
@@ -39,7 +39,7 @@
             {{!-- <li class="nav-item"><a class="nav-link" href="/about">About</a></li> --}}
         </ul>
 
-        <form action="/search" method="get" class="d-flex col-5">
+        <form action="/search" method="get" class="d-flex col-md-5 col-12">
             <input 
                 class="form-control mx-2" 
                 type="search" 
